@startuml

title __IMPLEMENTATION's Class Diagram__\n

  namespace de.shimunmatic.informationhub {
    namespace service.implementation {
      class de.shimunmatic.informationhub.service.implementation.AbstractService {
          - repository : JpaRepository<T, U>
          + AbstractService()
          + delete()
          + deleteById()
          + getAll()
          + getById()
          + save()
          + save()
          + update()
      }
    }
  }
  

  namespace de.shimunmatic.informationhub {
    namespace service.implementation {
      class de.shimunmatic.informationhub.service.implementation.CountryStateServiceImpl {
          - apiUrl : String
          - cacheManager : CacheManager
          {static} - formatter : DateTimeFormatter
          {static} - log : Logger
          - template : RestTemplate
          {static} - utcFormatter : DateTimeFormatter
          + CountryStateServiceImpl()
          + evictCacheForDailyUpdate()
          + fetchNewStatistic()
          + getAllForCountry()
          + getAllForCountryOnDate()
          + getAllForProcessedDate()
          + getAllForWorld()
          + getAllForWorldOnDate()
          + getListOfCountries()
          - fetchForDate()
          - getDatesFromLast()
          - getFromRecord()
          - getStateFromStatesAndDate()
          - parseCountryStates()
          - runForDate()
      }
    }
  }
  

  namespace de.shimunmatic.informationhub {
    namespace service.implementation {
      class de.shimunmatic.informationhub.service.implementation.ProcessedDateServiceImpl {
          + ProcessedDateServiceImpl()
          + getAll()
          + getForFormattedProcessedDate()
          + getLastProcessedDate()
      }
    }
  }
  

  de.shimunmatic.informationhub.service.implementation.AbstractService .up.|> de.shimunmatic.informationhub.service.definition.CRUDService
  de.shimunmatic.informationhub.service.implementation.CountryStateServiceImpl .up.|> de.shimunmatic.informationhub.service.definition.CountryStateService
  de.shimunmatic.informationhub.service.implementation.CountryStateServiceImpl -up-|> de.shimunmatic.informationhub.service.implementation.AbstractService
  de.shimunmatic.informationhub.service.implementation.CountryStateServiceImpl o-- de.shimunmatic.informationhub.parser.countrystate.CountryStateCSVParserFactory : countryStateCSVParserFactory
  de.shimunmatic.informationhub.service.implementation.CountryStateServiceImpl o-- de.shimunmatic.informationhub.service.definition.ProcessedDateService : processedDateService
  de.shimunmatic.informationhub.service.implementation.CountryStateServiceImpl o-- de.shimunmatic.informationhub.repository.CountryStateRepository : repository
  de.shimunmatic.informationhub.service.implementation.ProcessedDateServiceImpl .up.|> de.shimunmatic.informationhub.service.definition.ProcessedDateService
  de.shimunmatic.informationhub.service.implementation.ProcessedDateServiceImpl -up-|> de.shimunmatic.informationhub.service.implementation.AbstractService
  de.shimunmatic.informationhub.service.implementation.ProcessedDateServiceImpl o-- de.shimunmatic.informationhub.repository.ProcessedDateRepository : repository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
